nothing new here, just home left

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 </head>
 
 <body>
-    <!-- navbar first -- apply to all pages-->
-      <nav class="navbar navbar-expand-lg navbar-dark bg-light fixed-top py-0" id="my-nav">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-light fixed-top py-0" id="my-nav">
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img src="./images/logo.png" class="logo" alt = "logo">
@@ -42,9 +41,8 @@
             </form>
           </div>
         </div>
-      </nav>
+    </nav>
 
-    <!-- Carousel with 2 images -->
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -54,15 +52,15 @@
               <div class="carousel-item active">
                 <img src="images/home1.jpg" alt="home1.jpg">
                 <div class="carousel-caption text-start text-wrap">
-                  <h5>God's Own Country</h5>
-                  <p>Kaaamehaaamehaaa!</p>
+                  <h5>Welcome to God's Own Country</h5>
+                  <p>We have a wild ride ahead for you. Hope you enjoy it!</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="images/home1.jpg" alt="home1.jpg">
                 <div class="carousel-caption text-start text-wrap">
-                  <h5>Third slide label</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
+                  <h5>COVID-19 Norms</h5>
+                  <p>Wear a mask outdoors. Wash your hands regularly. Break The Chain.</p>
                 </div>
               </div>
             </div>
@@ -75,7 +73,7 @@
               <span class="visually-hidden">Next</span>
             </button>
     </div>
-    <!-- content -->
+
     <br>
     <br>
 
@@ -103,46 +101,7 @@
     <br>
 
     <div class="container">
-    <p class="content">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non lorem 
-        felis. Maecenas vel nibh venenatis massa posuere dignissim. In ornare mi ligula,
-        sed vestibulum ante pellentesque vel. Sed finibus diam id pretium pretium. Vestibulum
-        at urna blandit, vulputate magna fringilla, sollicitudin dolor. In dictum arcu enim, vel
-        finibus lectus ornare at. Vivamus condimentum, lectus quis consectetur rhoncus, dui urna gravida nisl,
-        ullamcorper vestibulum ex ex nec eros. Proin congue suscipit nulla eget elementum. Cras scelerisque
-        elit vel dolor vestibulum, non semper sem commodo. Nunc tincidunt enim ac vehicula lacinia.
-        In vel pellentesque dolor. Proin laoreet quam feugiat rhoncus laoreet. Etiam venenatis, tellus
-        a venenatis maximus, odio est volutpat elit, ut molestie tellus purus consequat felis. Donec
-        ullamcorper est at elit lobortis, ut ultricies urna congue. Etiam tincidunt sagittis nibh eget
-        ornare. Vestibulum sed neque venenatis, scelerisque ex sed, sodales sapien. Orci varius natoque
-        penatibus et magnis dis parturient montes, nascetur ridiculus mus. In consectetur dictum blandit.
-        Curabitur faucibus odio odio. Vestibulum ut aliquet nunc, at accumsan nisl. Mauris bibendum eros 
-        sit amet urna finibus dictum.
-        Etiam neque leo, pulvinar eget tincidunt eget, sagittis quis ante. Integer ex nibh, facilisis a 
-        est vitae, euismod hendrerit turpis. Mauris eu mattis leo, sit amet pulvinar lacus. Nullam cursus 
-        ex sed volutpat facilisis. Mauris vitae tempor risus. Donec aliquam felis ut massa dignissim, nec 
-        facilisis massa dignissim. Etiam suscipit purus ut diam lacinia sagittis. Phasellus maximus posuere 
-        ultricies. Fusce nec sollicitudin enim.
-        Nam in convallis odio. In et vehicula odio. Donec ultricies libero in lectus sagittis 
-        placerat. Fusce accumsan ultrices tortor vel fermentum. In non elit sit amet dolor aliquet 
-        varius ac quis sem. Mauris porttitor mauris eu nisl venenatis, eu mattis erat elementum. Etiam 
-        consequat purus vel augue ullamcorper, quis molestie sem aliquet. Aliquam ut arcu ac velit hendrerit 
-        luctus. Aliquam sit amet lacinia arcu. Ut malesuada gravida blandit. Praesent semper et turpis non 
-        condimentum. Etiam placerat blandit risus porta cursus. Nulla varius gravida dolor sed pretium. Nullam 
-        placerat. Fusce accumsan ultrices tortor vel fermentum. In non elit sit amet dolor aliquet 
-        varius ac quis sem. Mauris porttitor mauris eu nisl venenatis, eu mattis erat elementum. Etiam 
-        consequat purus vel augue ullamcorper, quis molestie sem aliquet. Aliquam ut arcu ac velit hendrerit 
-        luctus. Aliquam sit amet lacinia arcu. Ut malesuada gravida blandit. Praesent semper et turpis non 
-        condimentum. Etiam placerat blandit risus porta cursus. Nulla varius gravida dolor sed pretium. Nullam 
-        sed fermentum turpis, sed dictum nisi. Sed nulla orci, volutpat vitae odio eu, consectetur tincidunt mi.
-        Nulla sagittis arcu at elit elementum tincidunt. Vestibulum ante ipsum primis in faucibus orci luctus 
-        et ultrices posuere cubilia curae; Donec sed pretium turpis, at viverra magna. Nullam vehicula 
-        dapibus ipsum, ac laoreet diam imperdiet eu. Quisque ac laoreet augue, ac finibus neque. Proin a 
-        quam tristique, tempus nibh elementum, iaculis turpis. Vestibulum faucibus augue in dignissim viverra. 
-        Proin a dapibus velit, ut iaculis arcu. In non pellentesque massa. Nam quis tortor ac velit tristique 
-        viverra sit amet non nunc. Integer laoreet aliquam aliquam. Proin nec quam ac massa bibendum euismod eget 
-        id lectus. Mauris vehicula lorem eget ullamcorper tincidunt. Morbi at ornare ex. Nam dictum nibh nisl.
-    </p>
+
     </div>
     
 </body>
