--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="images/home1.jpg" alt="home1.jpg">
-                <div class="carousel-caption text-start text-wrap">
-                  <h5>COVID-19 Norms</h5>
+                <img src="images/home2.jpg" alt="home1.jpg">
+                <div class="carousel-caption text-start text-wrap text-white">
+                  <h5>COVID-19</h5>
                   <p>Wear a mask outdoors. Wash your hands regularly. Break The Chain.</p>
                 </div>
               </div>
@@ -101,7 +101,7 @@
     <br>
 
     <div class="container">
-
+      
     </div>
     
 </body>
