dumb typo detected too late, but whatever

--- a/Districts/kozhikkode.html
+++ b/Districts/kozhikkode.html
@@ -123,7 +123,7 @@
 
                     <div class="card-body">
                       <h5 class="card-title">Kappad Beach</h5>
-                      <p class="card-text">Kappad Beach has historically played an important role in the history of Kerala. On these shores, in 1498, 170 men led by Vasco da Gama first stepped onto Kerala. The spice route flourished through this Beach. The rocks and small hills add to its charm. The nearby shacks are always stocked with excellent local delicacies and tea. Migratory birds can be spotted occasionally as well.</p>
+                      <p class="card-text">Kappad Beach has played an important role in the history of Kerala. On these shores, in 1498, 170 men led by Vasco da Gama first stepped onto Kerala. The spice route flourished through this Beach. The rocks and small hills add to its charm. The nearby shacks are always stocked with excellent local delicacies and tea. Migratory birds can be spotted occasionally as well.</p>
                     </div>
                 </div>
             </div>
