--- a/login/loggedin.html
+++ b/login/loggedin.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up</title>
-    <link rel="stylesheet" href="./signup.css">
+    
+    <!-- <meta http-equiv="refresh" content="3; url = ../index.html" /> -->
+    <!-- This is a dead page and not in use right now -->
+    <!-- removed the form action to redirect to this page -->
+
+    
+    <title>Signed In</title>
     <link rel="stylesheet" href="../styles/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
@@ -28,65 +33,15 @@
                 <a class="nav-link text-light" href="../Destinations/dest2.html">Destinations</a>
               </li>
               <li class="nav-item hover-underline-animation">
-                <a class="nav-link text-light" href="../login/login.html">Log In</a>
+                <a class="nav-link text-light" href="../signup/signup.html">Sign Up</a>
               </li>
             </ul>
           </div>
         </div>
     </nav>
 
-    <div class="container bg-transparent">
-    <div class="row my-row">
-    <div class="col-lg-3"></div>
-    <div class="col-lg-6">
-    <div class="card text-center my-auto my-card">
-        <div class="card-header text-light">
-            Sign Up quick and easy.
-        </div>
-  <form action="">
-    <div class="form-floating mb-2">
-        <input type="text" class="form-control" id="floatingInput" placeholder="name">
-        <label for="floatingInput">Name</label>
+    <div class="content1 text-center column">
+        <h4>Successfully Signed In!</h4>
+        <p>You will be redirected to the home page in a few seconds..</p>
     </div>
-
-    <div class="form-floating mb-2">
-        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-        <label for="floatingInput">Email address</label>
-    </div>
-
-    <div class="form-floating mb-2">
-      <input type="tel" class="form-control" id="floatingInput" placeholder="Phone Number">
-      <label for="floatingInput">Phone Number</label>
-    </div>
-
-    <div class="form-floating mb-2">
-      <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-      <label for="floatingPassword">Password</label>
-    </div>
-
-    <div class="form-floating mb-2">
-      <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-      <label for="floatingPassword">Re-type Password</label>
-    </div>
-  </br>
-    <div class="col-auto">
-        <button type="submit" class="btn btn-primary">Log In</button>
-    </div>
-  </form>
-
-</br>
-
-    <div class="card-footer text-muted">
-    <div>
-      Already have an account? <a href="../login/login.html">Log In.</a>
-    </div>
-    </div>
-    </div>
-    </div>
-    <div class="col-lg-3"></div>
-    </div>
-    </div>
-
 </body>
-
-</html>
