completed phase 2 of assignment 1

--- a/signup/signup.html
+++ b/signup/signup.html
@@ -65,8 +65,8 @@
     <div class="form-floating mb-2">
       <input type="password" class="form-control" id="Password" placeholder="Password">
       <label for="floatingPassword">Password</label>
-      <p class="text-center" id = "strength">weak</p>
-      <p class="text-start warn" id="warnPass">blaha</p>
+      <p class="text-center" id = "strength"></p>
+      <p class="text-start warn" id="warnPass"></p>
 
     </div>
 
@@ -75,7 +75,7 @@
       <label for="floatingPassword">Re-type Password</label>
       <p class="text-start warn" id="warnRePass"></p>
     </div>
-  </br>
+  
     <div class="col-auto">
         <button type="submit" class="btn btn-primary" id="submitBtn">SIgn Up</button>
     </div>
